MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/mfg_Claim_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Claim Line Item</label>
    <nameField>
        <displayFormat>CLT-{0000000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>