MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Adjusted_Expense_Costs__c.field-meta.xml
<CustomField>
    <fullName>mfg_Adjusted_Expense_Costs__c</fullName>
    <formula>BLANKVALUE(  mfg_Expense_Costs__c , 0) *
(1 - BLANKVALUE(  mfg_Expense_Coverage__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Expense Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>