MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Asset_Service__c.field-meta.xml
<CustomField>
    <fullName>mfg_Asset_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Service</label>
    <referenceTo>mfg_Asset_Service__c</referenceTo>
    <relationshipLabel>Claim Line Items</relationshipLabel>
    <relationshipName>Claim_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>