MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Claim__c.field-meta.xml
<CustomField>
    <fullName>mfg_Claim__c</fullName>
    <label>Claim</label>
    <referenceTo>mfg_Claim__c</referenceTo>
    <relationshipLabel>Claim Line Items</relationshipLabel>
    <relationshipName>Claim_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>