MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Claim_Action__c.field-meta.xml
<CustomField>
    <fullName>mfg_Claim_Action__c</fullName>
    <label>Claim Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repaired</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Reworked</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>No Action Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>