MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Coverage_Outcome__c.field-meta.xml
<CustomField>
    <fullName>mfg_Coverage_Outcome__c</fullName>
    <label>Coverage Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>