MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Defect_Code__c.field-meta.xml
<CustomField>
    <fullName>mfg_Defect_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defect Code</label>
    <referenceTo>mfg_Defect_Code__c</referenceTo>
    <relationshipLabel>Claim Line Items</relationshipLabel>
    <relationshipName>Claim_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>