MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Defect_Type__c.field-meta.xml
<CustomField>
    <fullName>mfg_Defect_Type__c</fullName>
    <label>Defect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>mfg_Defect_Category</valueSetName>
    </valueSet>
</CustomField>