MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Labour_Costs__c.field-meta.xml
<CustomField>
    <fullName>mfg_Labour_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Labour Costs</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>