MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Labour_Coverage__c.field-meta.xml
<CustomField>
    <fullName>mfg_Labour_Coverage__c</fullName>
    <formula>BLANKVALUE(
    mfg_Asset_Service__r.mfg_Labor_Covered__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labour Coverage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>