MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Last_Service_Date__c</fullName>
    <label>Last Service Date</label>
    <type>Date</type>
</CustomField>