MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>mfg_Outstanding_Amount__c</fullName>
    <formula>MAX(
    0,
    BLANKVALUE( mfg_Total_Adjusted_Costs__c , 0) -
    BLANKVALUE( mfg_Paid_Amount__c , 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>