MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>mfg_Paid_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>