MFG Ready Version/force-app/main/default/objects/mfg_Claim_Line_Item__c/fields/mfg_Total_Adjusted_Costs__c.field-meta.xml
<CustomField>
    <fullName>mfg_Total_Adjusted_Costs__c</fullName>
    <formula>BLANKVALUE( mfg_Adjusted_Parts_Costs__c , 0) +
BLANKVALUE( mfg_Adjusted_Labour_Costs__c , 0) +
BLANKVALUE( mfg_Adjusted_Expense_Costs__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adjusted Costs</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>